style.css
body {
    margin: 0;
  
      min-height: 100vh;
     
      display: flex;
      flex-direction: column;
  }
    
   

.header{
    
    
    height: 20px;
    padding: 16px;
    padding-left: 80px;
    display: flex;
    justify-content: space-between;
    
    
    
  
    

}
ul{
    display:flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    gap: 16px;
}
a {
    text-decoration: none;
    flex: 1;
    color: white;
}

h1{
    text-align: center;
}

    

.second-container {
    display: flex;
    flex-direction: row;
   
    padding-left: 80px;
    height: 350px;
    flex-shrink: auto;
    padding-top: 50px;
    
    
}


.second-container > img{
  
  padding-left: 50px;
  padding-top: 45px;
  height: 180px;
  width: 350px;
 
}




.first-text{
  margin-top: 40px;
  font-size: 48px;
  font-weight: bolder ;
 
}


.header,
.second-container{
background-color: #1F2937;
color: white;
}


.content{
height: 300px;
padding: 50px;



}
.boxes {
  
    padding: 0;
    display: flex;
    justify-content: center;
    gap: 52px;
    
    
  }
  .item{
    
    border-radius: 10px;
   
   width:200px;
   text-align:center;
   align-content: center;
  }

  .item > img {
    height: 150px;
    width:150px;
    border-radius: 15px;
    border: 4px solid #3882F6;
  }

  

  .third-container{
    
    display: flex;
    flex-direction: column;
    height: 300px;
    flex-shrink: 0;
    background-color: #E5E7EB;
    padding: 80px;
    padding-left: 500px;
    padding-right: 500px;
    justify-content: center;    
    align-items: center;
    font-size: 22px;
   
  }
  .quote {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
  }


    .small{
    font-weight: bold;
    font-size: 25px;
    align-self: flex-end;
  }

  .wrap{
    display: flex;  
    width: 700px;
    padding: 85px;
    margin: 100px 550px;
    justify-content: center;
    border-radius: 10px;
    background-color: #3882F6;
    color: white;
    font-size: 20px;
    
      
 }

 button{
  
  width: 90px;
  padding: 6px 8px;
  align-self: center;
  margin-left: 100px;
  border: 2px solid white;
  color: white; 
  font-weight: bold;
  border-radius: 5px;
  background-color: #3882F6;
 }

.element {
  font-size: 25px;
}

 .footer{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 25px;
  margin-top: auto;
 }

